<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/nouveau_cadeau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/profil_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="127dp"
                android:layout_height="127dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/default_profil" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/prenom_label"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/prenom"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nom_label"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/nom"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/age_label"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/age"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/situation_label"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/situation"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/datenaissance_label"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/datenaissance"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/add_kdo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_marginTop="16dp"
            android:src="@android:drawable/ic_input_add" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/expandableListView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout2" >
    </ExpandableListView>

</RelativeLayout>